--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="PAWPASTIC OFC 🐾">
-    <meta property="og:description" content="Official Website">
+    <meta property="og:description" content="Official Group Website">
     <meta property="og:image" content="https://drive.google.com/u/0/drive-viewer/AKGpihbMjb4MchY7PweSKKadvcpQP3_3EBcdBBP0padk_jhjLVKWvBjxL5FzSry7w03OmtDwZ6t09ray44ndDjNzrxncbcMaUXoD1gQ=s2560">
     <meta name="theme-color" content="#000">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
